Removing javasysmon